<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/ration_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_weight="1.2"
                    android:background="#fff"
                    android:gravity="end"
                    android:text="@string/shopkeeper_name"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nameOfOwner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="10sp"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:textColor="#000" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout1"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_weight="1.2"
                    android:background="#fff"
                    android:gravity="end"
                    android:text="@string/shop_code"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/shopCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="10sp"
                    android:layout_weight="0.8"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout2"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_weight="1.2"
                    android:background="#fff"
                    android:gravity="end"
                    android:text="@string/shop_no"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/shopNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="10sp"
                    android:layout_weight="0.8"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout3"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_weight="1.2"
                    android:background="#fff"
                    android:gravity="end"
                    android:text="@string/address"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="10sp"
                    android:layout_weight="0.8"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout4"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_weight="1.2"
                    android:background="#fff"
                    android:gravity="end"
                    android:text="@string/mobile_number"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/mobilenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="10sp"
                    android:layout_weight="0.8"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@+id/linearLayout6"
                android:layout_marginBottom="5sp"
                android:layout_marginTop="10sp"
                android:id="@+id/linearLayout5"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/getDirection"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|center"
                    android:layout_weight="3"
                    android:text="@string/get_directions" />

                <TextView
                    android:id="@+id/getDirectionImage"
                    android:layout_width="100sp"
                    android:layout_height="50sp"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:background="@drawable/baseline_directions_black_48dp"
                    android:gravity="center" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="#000"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_below="@id/linearLayout5"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>