<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff">

    <android.support.v7.widget.CardView
        android:id="@+id/contact_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_weight="1.2"
                    android:background="#fff"
                    android:gravity="end"
                    android:text="@string/nameOfficer"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nameOfOfficer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="10sp"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:textColor="#000" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout1"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_weight="1.2"
                    android:background="#fff"
                    android:gravity="end"
                    android:text="@string/officerPost"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/officerRank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="10sp"
                    android:layout_weight="0.8"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout2"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_weight="1.2"
                    android:background="#fff"
                    android:gravity="end"
                    android:text="@string/officerContact"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/contactNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:textColor="#0acafa"
                    android:textStyle="bold"
                    android:layout_marginTop="10sp"
                    android:layout_weight="0.8"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout3"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_weight="1.2"
                    android:background="#fff"
                    android:gravity="end"
                    android:text="@string/officerArea"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/contactArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:textColor="#0acafa"
                    android:textStyle="bold"
                    android:layout_marginTop="10sp"
                    android:layout_weight="0.8"
                    android:gravity="center" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="#000"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="2sp"
                android:layout_below="@id/linearLayout4"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>